fix(docs): adjust scrollbar width styling for modal lock

--- a/docs/src/assets/styles/common.css
+++ b/docs/src/assets/styles/common.css
@@ -6,9 +6,16 @@
   background: rgb(190, 200, 200);
 }
 
-html {
+html,
+body {
   scrollbar-width: thin;
   scrollbar-color: #eaeaea transparent;
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
 }
 
 .custom-carousel-item {
